BuildingsPy Changelog
---------------------

Version 5.2.0, xxxx
^^^^^^^^^^^^^^^^^^^

- In buildingspy/development/validator.py, added method validateHyperlinks()
  that searches for broken hyperlinks.
  (https://github.com/lbl-srg/BuildingsPy/issues/544)
- For Optimica regression tests, added check for connector to itself
  (https://github.com/lbl-srg/BuildingsPy/issues/504)
- In buildingspy/development/refactor.py, updated writing the Modelica
  package.order file to avoid changing the UsersGuide order.
  (https://github.com/lbl-srg/BuildingsPy/issues/541)


Version 5.1.0, April 9, 2024 -- Release 5.1
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- In buildingspy/development/regressiontest.py, corrected bug that caused CI tests to not fail if run in batch
  mode and a reference file was missing.
- In buildingspy/io/outputfile.py, corrected error reporting for Dymola that caused a string index out of range.
  (https://github.com/lbl-srg/BuildingsPy/issues/536)
- Added support to generate unit test configuration file conf.yml
  for OpenModelica and Optimica tests.
  (https://github.com/lbl-srg/BuildingsPy/issues/530)


Version 5.0.0, September 1, 2023 -- Release 5.0
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Added buildingspy.simulate.OpenModelica to support simulation with OpenModelica, and refactored
  modules for simulation with Dymola and Optimica.
  (https://github.com/lbl-srg/BuildingsPy/issues/500)
- In buildingspy/simulate/base_simulator.py, updated separator for MODELICAPATH on Windows.
- In buildingspy/simulate/base_simulator.py, added support for libraries with encrypted top-level package.moe file.
- Corrected bug in buildingspy/development/refactor.py that causes renames to fail on Windows.
- Corrected bug in buildingspy/development/regressiontest.py in parsing .mos scripts with simulateModel command on multiple lines.
  (https://github.com/lbl-srg/BuildingsPy/issues/508)
- Added class buildingspy.development.simulationCompare that compares