@@ -115,8 +115,10 @@ def _simulate(model, timeout):
                 esc = ""
             else:
                 esc = "./"
+            mo_timeout = 0 if timeout is None else timeout
+            mo_timeout = 0 if mo_timeout < 0 else mo_timeout
             f.write(
-                f"""retVal := system("{esc}{model} -override=startTime={{ start_time }},stopTime={{ final_time }},tolerance={{ rtol }},solver={{ solver }},outputFormat=mat,variableFilter=\\\"({filter})\\\" -steps -cpu -lv LOG_STATS");
+                f"""retVal := system("{esc}{model} -override=startTime={{ start_time }},stopTime={{ final_time }},tolerance={{ rtol }},solver={{ solver }},outputFormat=mat,variableFilter=\\\"({filter})\\\" -alarm {mo_timeout} -steps -cpu -lv LOG_STATS");
 exit(retVal);
 """)
         output = _run_process(return_dict, cmd, worDir, timeout)
