@@ -1,9 +1,8 @@
 within MyModelicaLibrary;
 model MyModelTimeOut
-  parameter Integer sec = 5 "Time for sleep in seconds";
-  Real r "Return value of mySleep";
-
-  function mySleep
+  parameter Integer sec = 2 "Time for sleep in seconds";
+  parameter Integer r = mySleep(sec) "Return value of mySleep";
+   function mySleep
     input Integer sec "Sleep time in seconds";
     output Integer r "Return value";
     external "C" r = MySleep(sec)
@@ -11,6 +10,5 @@ model MyModelTimeOut
        Include="#include <MySleep.c>",
        IncludeDirectory="modelica://MyModelicaLibrary/Resources/C-Sources");
   end mySleep;
-equation
-  r = mySleep(sec=sec);
+
 end MyModelTimeOut;
