@@ -3,7 +3,8 @@ BuildingsPy Changelog
 
 Version 5.2.0, xxxx
 ^^^^^^^^^^^^^^^^^^^
-
+- For OpenModelica simulations, refactored handling of timeout to avoid simulation to hang.
+  (https://github.com/lbl-srg/BuildingsPy/issues/546)
 - In buildingspy/development/validator.py, added method validateHyperlinks()
   that searches for broken hyperlinks.
   (https://github.com/lbl-srg/BuildingsPy/issues/544)
